tests/macros/plugin/default.stderr
error: option `default` does not exist for kind `plugin`
 --> $DIR/default.rs:2:46
  |
2 |     let q = inquisition::questions![Plugin { default: todo!() }];
  |                                              ^^^^^^^
