tests/macros/plugin/default.rs
fn main() {
    let q = inquisition::questions![Plugin { default: todo!() }];
}
